Book add updated and book download done

--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -1,63 +1,135 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
+/**{*/
+/*    box-sizing: border-box;*/
+/*    padding: 0;*/
+/*    margin: 0;*/
+/*}*/
 
-.container{
+/*.container1{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    flex-wrap: wrap;*/
+/*}*/
+/*.card1{*/
+/*    background: white;*/
+/*    width: 300px;*/
+/*    margin: 50px;*/
+/*    border-radius: 20px 20px 0 0;*/
+/*}*/
+/*.card1-image{*/
+/*    height: 150px;*/
+/*    margin-bottom: 15px;*/
+/*    background-size: cover;*/
+/*}*/
+/*.card1 h2{*/
+/*    padding: 10px;*/
+/*}*/
+/*.card1 p{*/
+/*    padding: 10px;*/
+/*}*/
+/*.download_bt{*/
+/*    width: 150px;*/
+/*    float: left;*/
+/*    margin-top: 20px;*/
+/*}*/
+/*.download_bt a {*/
+/*    width: 100%;*/
+/*    float: left;*/
+/*    text-align: center;*/
+/*    font-size: 16px;*/
+/*    color: blue;*/
+/*    background-color: transparent;*/
+/*    border: 1px solid blue;*/
+/*    padding: 8px 0px;*/
+/*    text-transform: uppercase;*/
+/*}*/
+/*.download_bt a:hover {*/
+/*    background-color: #f64646;*/
+/*}*/
+/*!*.card1 a{*!*/
+/*!*    background-color: black;*!*/
+/*!*    color: aqua;*!*/
+/*!*    padding: 15px 20px;*!*/
+/*!*    display: block;*!*/
+/*!*    text-align: center;*!*/
+/*!*    margin: 20px 50px;*!*/
+/*!*    text-decoration: none;*!*/
+/*!*}*!*/
+/*.card1:hover{*/
+/*    background-color: white;*/
+/*    color: white;*/
+/*    cursor: pointer;*/
+/*    transform: scale(1.03);*/
+/*    transition: all 1s ease;*/
+/*}*/
+
+
+.name-author{
+    text-align: center;
+    font-size: 30px;
+    margin: 0;
+    padding-top: 10px;
+}
+.gallery{
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-}
-.card1{
-    background: white;
-    width: 300px;
-    margin: 50px;
-    border-radius: 20px 20px 0 0;
-}
-.card1-image{
-    height: 150px;
-    margin-bottom: 15px;
-    background-size: cover;
-}
-.card1 h2{
-    padding: 10px;
-}
-.card1 p{
-    padding: 10px;
-}
-.download_bt{
-    width: 150px;
-    float: left;
-    margin-top: 20px;
-}
-.download_bt a {
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+}
+.content1{
+    width: 20%;
+    margin: 15px;
+    box-sizing: border-box;
     float: left;
     text-align: center;
-    font-size: 16px;
-    color: blue;
-    background-color: transparent;
-    border: 1px solid blue;
-    padding: 8px 0px;
-    text-transform: uppercase;
-}
-.download_bt a:hover {
-    background-color: #f64646;
-}
-/*.card1 a{*/
-/*    background-color: black;*/
-/*    color: aqua;*/
-/*    padding: 15px 20px;*/
-/*    display: block;*/
-/*    text-align: center;*/
-/*    margin: 20px 50px;*/
-/*    text-decoration: none;*/
-/*}*/
-.card1:hover{
-    background-color: white;
-    color: white;
+    border-radius: 20px;
     cursor: pointer;
-    transform: scale(1.03);
-    transition: all 1s ease;
+    padding-top: 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transition: .4s;
+    background: #f2f2f2;
+}
+.content-hover{
+box-shadow: 0 3px 6px rgba(0,0,0,0.16),
+0 3px 6px rgba(0,0,0,0.23);
+    transform: translate(0px, -8px);
+}
+.card-image{
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+.description{
+    text-align: center;
+    color: #b2bec3;
+    padding-top: 0 8px;
+}
+.download-bottom{
+    text-align: center;
+    font-size: 24px;
+    color: #fff;width: 100%;
+    padding: 15px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    margin-top: 5px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+.download{
+    background: #2183a2;
+}
+@media (max-width: 1000px) {
+    .content1{
+        width: 45px;
+    }
+}
+
+@media (max-width: 750px) {
+    .content1{
+        width: 100%;
+    }
 }
