--- a/src/main/resources/templates/view-books.html
+++ b/src/main/resources/templates/view-books.html
@@ -50,6 +50,7 @@
                     <li class="nav-item active">
                         <a class="nav-link" th:href="@{'/faculty'}">Facultet azolari</a>
                     </li>
+
                     <li class="nav-item dropdown" th:each="groups : ${groups}">
                         <a class="nav-link dropdown-toggle" id="navbarGroups" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">Guruhlar</a>
@@ -68,6 +69,7 @@
                             <a class="dropdown-item" th:href="@{'/faculty'}">Malumotlar</a>
                         </div>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/donate.html}">Mualiflar</a>
                     </li>
@@ -80,43 +82,43 @@
 <!-- about section start -->
 
 
-<section class="container">
-    <div th:each="book : ${bookList}" class="card1">
-        <div class="card1-image">
-            <img  th:if="${book.getBase64() != null}"
-                 th:src="'data:image/jpeg;base64, '+${book.getBase64()}" alt="">
-        </div><br>
-        <h2 th:text="${book.getName()}"></h2>
-        <h3 th:text="${book.getAuthors()}"></h3>
-<!--        <h3 th:text="${book.getRusUzb()==false ? 'Ruscha':'Uzbekcha'}"></h3>-->
-        <p th:text="${book.getDescription()}">
-        </p>
-        <div class="download_bt">
-            <a th:href="'/books/download'">Yuklab olish</a>
-        </div>
-    </div>
-</section>
-
-<!--<div class="fundraise_section">-->
-<!--    <div class="fundraise_section_main">-->
-<!--        <div class="row">-->
-<!--            <div class="col-lg-4" th:each="bokks : ${bookList}">-->
-<!--                <div class="box_main">-->
-<!--                    <div class="icon_1">-->
-<!--                        <a th:href="@{'/bokks/get-by-id/'+ ${bokks.getId()}}">-->
-<!--                            <img th:if="${bokks.getBase64() != null}"-->
-<!--                                 th:src="'data:image/jpg;base64, '+${bokks.getBase64()}" alt="">-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                    <h2 class="volunteer_text" th:text="${bokks.getName()}"></h2>-->
-<!--                    <h4 class="volunteer_text" th:text="${bokks.getAuthors()}"></h4>-->
-<!--                    <p class="lorem_text" th:text="${bokks.getDescription()}"></p>-->
-<!--                    <div class="join_bt"><a th:href="@{'/bokks/get-by-id/' + ${bokks.getId()}}">Ko'proq</a></div>-->
-<!--                </div>-->
-<!--            </div>-->
+<!--<section class="container">-->
+<!--    <div th:each="book : ${bookList}" class="card1">-->
+<!--        <div class="card1-image">-->
+<!--            <img th:if="${book.getBase64() != null}"-->
+<!--                 th:src="'data:image/jpeg;base64, '+${book.getBase64()}" alt="">-->
+<!--        </div>-->
+<!--        <br>-->
+<!--        <div class="form-group">-->
+<!--            <label class="bold" for="author">Name: </label>-->
+<!--            <h2 name="author" id="author" th:text="${book.getName()}" ></h2>-->
+<!--        </div>-->
+<!--&lt;!&ndash;        <h2 th:text="${book.getName()}"></h2>&ndash;&gt;-->
+<!--        <h3 th:text="${book.getAuthors()}"></h3>-->
+<!--        <p th:text="${book.getDescription()}">-->
+<!--        </p>-->
+<!--        <div class="download_bt">-->
+<!--            <a th:href="'/books/download'">Yuklab olish</a>-->
 <!--        </div>-->
 <!--    </div>-->
-<!--</div>-->
+<!--</section>-->
+
+<div class="gallery">
+    <div class="content1" th:each="book : ${bookList}">
+        <div>
+            <img class="card-image" th:if="${book.getBase64() != null}"
+                 th:src="'data:image/jpeg;base64, '+${book.getBase64()}" alt="">
+        </div>
+        <h2 class="name-author" th:text="${book.getName()}"></h2>
+        <h2 class="name-author" th:text="${book.getAuthors()}"></h2>
+        <p class="description" th:text="${book.getDescription()}"></p>
+        <div>
+<!--            <button class="download-bottom download">Yuklab olish</button>-->
+            <a class="download-bottom download" th:href="@{'/books/download/'+${book.getId()}}">Yuklab Olish</a>
+        </div>
+    </div>
+</div>
+
 
 <!-- about section end -->
 <!-- footer section start -->
